--- a/resources/css/scss/_colors.scss
+++ b/resources/css/scss/_colors.scss
@@ -22,8 +22,10 @@ $gray-a: #aaa;
 $gray-c: #ccc;
 $gray-e: #eee;
 $gray-e4: #e4e4e4;
+$gray-eb: #ebebeb;
 $gray-ef: #efefef;
 $gray-f5: #f5f5f5;
+$gray-d5: #d5d5d5;
 
 
 // Common
@@ -80,6 +82,7 @@ $error: #f14747;
 // Main
 $main: #0e4194;
 $main_sub: #05146e;
+$main_sub: #002a70;
 
 // Input
 $inputDefault: #ccc;
