--- a/resources/css/scss/modules/_popup_bp.scss
+++ b/resources/css/scss/modules/_popup_bp.scss
@@ -10,10 +10,12 @@
     .btn-box.justify-content-end {
         margin-top: 10px;
     }
-    .pop-guide {
-        .list {
-            @include bp-font-size-xs; 
-        }
+}
+.pop-guide {
+    .list {
+        @include bp-font-size-xs; 
+        color: $gray-7;
+        line-height: 18px;
     }
 }
 
