--- a/resources/css/scss/modules/_icon.scss
+++ b/resources/css/scss/modules/_icon.scss
@@ -149,6 +149,34 @@ th .required {
             background-image: url($imgPathIcon+'/btn_tip_hover.svg');
         }
     }
+    
+}
+// 52*52
+.status-banner.contract .list {
+    background-position: 20px 10px;
+    background-size: 52px 52px;
+    background-repeat: no-repeat;
+    &.list1 {
+        background-image: url($imgPathIcon+'/icon_contact_01.svg');
+    }
+    &.list2 {
+        background-image: url($imgPathIcon+'/icon_contact_02.svg');
+    }
+    &.list3 {
+        background-image: url($imgPathIcon+'/icon_contact_03.svg');
+    }
+    &.list4 {
+        background-image: url($imgPathIcon+'/icon_contact_04.svg');
+    }
+    &.list5 {
+        background-image: url($imgPathIcon+'/icon_contact_05.svg');
+    }
+    &.list6 {
+        background-image: url($imgPathIcon+'/icon_contact_06.svg');
+    }
+    &.list7 {
+        background-image: url($imgPathIcon+'/icon_contact_07.svg');
+    }
 }
 .active .h-ico {
     &.menu1 {
@@ -176,12 +204,6 @@ th .required {
         background-image: url($imgPathIcon+'/icon_athorize_selected.svg');
     }
 }
-// .is-checked .k-i-input-check {
-//     background-image: url($imgPathIcon+'/icon_check_blue.svg');
-// }
-// .is-important .k-i-input-check {
-//     background-image: url($imgPathIcon+'/icon_check_active.svg');
-// }
 .input-check {
     &.k-state-focused, 
     &.k-state-active {
